# paper-trading

./: .gitignore  CHANGELOG.md  CHANGELOG_FACTOR_ENGINE.md  LICENSE  README.md  duckdb_factor_engine-0.4.0-py3-none-any.whl  pyproject.toml
deploy/: paper-trading.service
deploy/ICIR_monthly/: README.md  config.json  setup.sh
deploy/ICIR_monthly/scripts/: bootstrap.py
deploy/ICIR_monthly/strategies/: pcat_icir_100_monthly.py
deploy/template/: README.md  config.json  setup.sh
deploy/template/scripts/: bootstrap.py
scripts/: bootstrap_paper.py  sync_version.sh
src/paper_trading/: __init__.py  _version.py  app.py  auto_trader.py  broker.py  cli.py  data_provider.py  dividend.py  engine.py  persistence.py  qmt_compat.py  scheduler.py
src/paper_trading/static/css/: style.css
src/paper_trading/static/js/: app.js
src/paper_trading/templates/: index.html
strategies/: example_strategy.py  pcat_icir_100_monthly.py
